--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,14 @@ android:
   components:
     - platform-tools
     - tools
-    - android-23
-    - build-tools-23.0.3
+    - android-24
+    - build-tools-25.0.0
     - extra-google-m2repository
     - extra-android-m2repository
-    - sys-img-armeabi-v7a-android-23
+    - sys-img-armeabi-v7a-android-24
 
 before_script:
-  - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
+  - echo no | android create avd --force -n test -t android-24 --abi armeabi-v7a
   - emulator -avd test -no-audio -no-window &
   - android-wait-for-emulator
   - adb shell settings put global window_animation_scale 0 &
@@ -24,6 +24,9 @@ before_script:
 
 script:
   - ./gradlew test spoon
+
+after_failure:
+  - find . -path "*spoon*.json" | xargs grep "fail"
 
 notifications:
   email: false
