--- a/reark/build.gradle
+++ b/reark/build.gradle
@@ -8,23 +8,20 @@ buildscript {
     repositories {
         mavenCentral()
     }
-
-    dependencies {
-        classpath 'com.android.tools.build:gradle:2.1.3'
-        classpath 'com.stanfy.spoon:spoon-gradle-plugin:1.2.2'
-    }
 }
 
 android {
-    compileSdkVersion 23
-    buildToolsVersion "23.0.3"
+    compileSdkVersion 24
+    buildToolsVersion "25.0.0"
     publishNonDefault true
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 23
+        targetSdkVersion 24
         versionCode 1
         versionName "1.0"
+
+        testInstrumentationRunner 'android.support.test.runner.AndroidJUnitRunner'
     }
     buildTypes {
         release {
@@ -47,13 +44,13 @@ configurations {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:23.3.0'
-    compile 'com.android.support:support-annotations:23.3.0'
+    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:support-annotations:24.2.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
 
     // RxJava
-    compile 'io.reactivex:rxjava:1.1.3'
-    compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'io.reactivex:rxjava:1.2.3'
+    compile 'io.reactivex:rxandroid:1.2.1'
 
     // RxBinding wrappers
     compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
@@ -64,13 +61,14 @@ dependencies {
     testCompile 'org.powermock:powermock-api-mockito:1.6.4'
     testCompile 'org.powermock:powermock-module-junit4:1.6.4'
 
-    androidTestCompile 'com.android.support:support-annotations:23.3.0'
+    androidTestCompile 'com.android.support:support-annotations:24.2.1'
+    androidTestCompile 'com.android.support.test:runner:0.5'
 
     // Javadoc generation needs dependencies in classpath
-    javadocDeps 'com.android.support:support-annotations:23.3.0'
+    javadocDeps 'com.android.support:support-annotations:24.2.1'
     javadocDeps 'com.squareup.retrofit:retrofit:1.9.0'
-    javadocDeps 'io.reactivex:rxjava:1.1.3'
-    javadocDeps 'io.reactivex:rxandroid:1.1.0'
+    javadocDeps 'io.reactivex:rxjava:1.2.3'
+    javadocDeps 'io.reactivex:rxandroid:1.2.1'
 }
 
 apply from: 'gradle-mvn-push.gradle'
