--- a/reark/build.gradle
+++ b/reark/build.gradle
@@ -4,20 +4,14 @@ apply plugin: 'maven'
 apply plugin: 'signing'
 apply plugin: 'spoon'
 
-buildscript {
-    repositories {
-        mavenCentral()
-    }
-}
-
 android {
-    compileSdkVersion 24
-    buildToolsVersion "25.0.0"
+    compileSdkVersion 25
+    buildToolsVersion "25.0.2"
     publishNonDefault true
 
     defaultConfig {
         minSdkVersion 15
-        targetSdkVersion 24
+        targetSdkVersion 25
         versionCode 1
         versionName "1.0"
 
@@ -43,32 +37,34 @@ configurations {
 }
 
 dependencies {
-    compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.android.support:appcompat-v7:24.2.1'
-    compile 'com.android.support:support-annotations:24.2.1'
-    compile 'com.squareup.retrofit2:retrofit:2.0.0'
-    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.0'
-    compile 'com.squareup.retrofit2:converter-gson:2.0.0'
+    // Support libraries
+    compile 'com.android.support:appcompat-v7:25.1.0'
+    compile 'com.android.support:support-annotations:25.1.0'
+
+    // Retrofit
+    compile 'com.squareup.retrofit2:retrofit:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.1.0'
+    compile 'com.squareup.retrofit2:converter-gson:2.1.0'
 
     // RxJava
-    compile 'io.reactivex:rxjava:1.2.3'
+    compile 'io.reactivex:rxjava:1.2.5'
     compile 'io.reactivex:rxandroid:1.2.1'
 
     // RxBinding wrappers
-    compile 'com.jakewharton.rxbinding:rxbinding:0.3.0'
+    compile 'com.jakewharton.rxbinding:rxbinding:1.0.0'
 
     // Unit test build
     testCompile 'junit:junit:4.12'
-    testCompile 'org.mockito:mockito-core:1.10.19'
-    testCompile 'org.powermock:powermock-api-mockito:1.6.4'
-    testCompile 'org.powermock:powermock-module-junit4:1.6.4'
+    testCompile 'org.powermock:powermock-api-mockito:1.6.6'
+    testCompile 'org.powermock:powermock-module-junit4:1.6.6'
 
-    androidTestCompile 'com.android.support:support-annotations:24.2.1'
+    // Android test build
+    androidTestCompile 'com.android.support:support-annotations:25.1.0'
     androidTestCompile 'com.android.support.test:runner:0.5'
 
     // Javadoc generation needs dependencies in classpath
-    javadocDeps 'com.android.support:support-annotations:24.2.1'
-    javadocDeps 'io.reactivex:rxjava:1.2.3'
+    javadocDeps 'com.android.support:support-annotations:25.1.0'
+    javadocDeps 'io.reactivex:rxjava:1.2.5'
     javadocDeps 'io.reactivex:rxandroid:1.2.1'
 }
 
